<resources>
    <string name="app_name">Zick</string>
    <string name="register">register</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Name</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="title_activity_asdfghj">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_aasd">Sign in</string>
    <string name="title_activity_sdfghj">sdfghj</string>
    <string name="next">next</string>
    <string name="cur_name">cur_name</string>
    <string name="start_chat">Start chat</string>
</resources>
