<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">


    <EditText
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login"
        android:layout_alignStart="@id/Login"
        android:layout_alignLeft="@id/Login"
        android:layout_alignRight="@id/Login"
        android:inputType="textPersonName"
        android:hint="@string/mail"
        android:layout_alignEnd="@id/Login" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignLeft="@id/Login"
        android:layout_alignStart="@id/Login" />

    <Button
        android:id="@+id/sign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Login"
        android:layout_below="@id/Pass"
        android:text="@string/sign_up"
        android:layout_alignStart="@+id/Login" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sign_button"
        android:layout_alignRight="@id/Pass"
        android:text="@string/register"
        android:layout_alignEnd="@id/Pass" />
</RelativeLayout>